fixed headingbanner view on mobile

--- a/style.css
+++ b/style.css
@@ -4789,22 +4789,36 @@ html {
   background: #fc2;
   float: none;
 }
+.bannerInfo a{
+  color:#755915;
+  text-decoration: underline;
+}
+.bannerInfo a:hover{
+  color:black;
+  text-decoration: underline;
+}
 
 .bannerInfo__content {
   padding: 16px;
   max-width: 500px;
-  margin-left: 35%;
-  margin-right: 35%;
   display: flex;
   align-items: center;
-  width: 50%;
-  
+  margin-left: 35%;
+  margin-right: 35%;
+  width: 80%;
+}
+@media (max-width: 804px) {
+  .bannerInfo__content {
+    margin-left: 0%;
+    margin-right: 0%;
+    width: 95%;
+  }
 }
 
 #bannerInfo__text {
   /*flex-grow: 1;*/
   line-height: 1.4;
-  font-family: "Quicksand", sans-serif;
+  font-family: "Gibson", sans-serif;
 }
 
 .bannerInfo__close, .bannerInfo__edit {
